Grandes cambios Agregado fichero test

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,13 +3,13 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-    <title>#VENEZOLANO API</title>
+    <title>#VENEZOLANO API {% block title %}{% endblock %}</title>
 </head>
 <body>
         <section class="hero is-info is-medium is-bold">
@@ -21,27 +21,22 @@
                                 #VENEZOLANO API
                             </a>
                             <span class="navbar-burger burger" data-target="navbarMenu">
-                                <span></span>
-                                <span></span>
-                                <span></span>
                             </span>
                         </div>
                         <div id="navbarMenu" class="navbar-menu">
                             <div class="navbar-end">
                                 <div class="tabs is-right">
                                     <ul>
-                                        <li class="is-active"><a>Inicio</a></li>
-                                        <li><a href="">Ejemplos</a></li>
-                                        <li><a href="">Caracteristicas</a></li>
-                                        <li><a href="">Desarrollador</a></li>
-                                        <li><a href="">Ayuda</a></li>
+                                      {% for ni in ['home', 'ayuda', 'buscador', 'contribuir'] %}
+                                        <li {%- if request.path == url_for(ni) %} class="is-active"{% endif %}> <a href="{{ url_for(ni) }}">{{ ni | capitalize }}</a></li>
+                                      {% endfor %}
                                     </ul>
                                     <span class="navbar-item">
                                         <a class="button is-white is-outlined" href="https://github.com/dansup/bulma-templates/blob/master/templates/hero.html">
                                             <span class="icon">
                                                 <i class="fa fa-github"></i>
                                             </span>
-                                            <span title="Hello from the other side">Ver Codigo</span>
+                                            <span title="hola desde otro lado">Ver Codigo</span>
                                         </a>
                                     </span>
                                 </div>
@@ -57,7 +52,7 @@
                     #VENEZOLANO API
                     </h1>
                     <h2 class="subtitle">
-                   Este es un pequeño sistema que tiene como finalidad entregar informacion sobre la identidad de un 
+                   Este es un pequeño sistema que tiene como finalidad entregar informacion sobre la identidad de un
                    Ciudadano Venezolano en formato JSON completamente desarrollado en python con la plataforma (Flask).
                     </h2>
                  {% endblock %}
