--- a/templates/ayuda.html
+++ b/templates/ayuda.html
@@ -4,6 +4,6 @@
 	<h1 class="title">AYUDA </h1>
 	<h2 class="subtitle">
 	Como funciona, como puedo utilizarlo?
-	<a class="button is-primary">BOTON</a>
+	<a class="button is-primary">Basdadaa OTON</a>
 	</h2>
 {% endblock %}
