--- a/templates/buscar_ciudadano.html
+++ b/templates/buscar_ciudadano.html
@@ -7,5 +7,17 @@
  </h2>
 <div class='card'>
 Buscador de ciudadanos :V
+<div class="box">
+    <div class="field is-grouped">
+        <p class="control is-expanded">
+            <input class="input" type="text" placeholder="BUSCAR">
+        </p>
+        <p class="control">
+            <a class="button is-info">
+                BUSCAR
+            </a>
+        </p>
+    </div>
+    </div>
 </div>
 {% endblock %}
