modificado:    static/main.css 	modificado:    templates/ayuda.html 	nuevo archivo: templates/base/__init__.py 	nuevo archivo: templates/base/head.html 	nuevo archivo: templates/base/layout.html 	modificado:    templates/buscar_ciudadano.html 	modificado:    templates/contribuir.html 	modificado:    webapi.py Mejorado el aspecto de la app re-estructuro el codigo del template layout arreglo un problema el el fichero de web api.

--- a/templates/ayuda.html
+++ b/templates/ayuda.html
@@ -1,7 +1,7 @@
-{% extends "layout.html" %}
+{% extends "base/layout.html" %}
 {% block title %}AYUDA{% endblock %}
 {% block body %}
-	<h1 class="title">AYUDA </h1>
+	<h1 class="title">Ayuda </h1>
 	<h2 class="subtitle">
 	Como funciona, como puedo utilizarlo?
 	<a class="button is-primary">Basdadaa OTON</a>
