--- a/templates/buscar_ciudadano.html
+++ b/templates/buscar_ciudadano.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "base/layout.html" %}
 {% block title %}BUSCADOR{% endblock %}
 {% block body %}
  <h1 class="title">Buscador </h1>
