--- a/templates/contribuir.html
+++ b/templates/contribuir.html
@@ -1,5 +1,5 @@
 
-{% extends "layout.html" %}
+{% extends "base/layout.html" %}
 {% block title %}Contribuciones{% endblock %}
 {% block body %}
  <h1 class="title">CONTRIBUIR FRAME </h1>
