Arreglado el codigo de algunas plantillas para mejorar su estructura.
Agregado pypugjs en el requirements.txt

--- a/templates/ayuda.pug
+++ b/templates/ayuda.pug
@@ -1,2 +1,7 @@
-extends "base/layout.pug"
-{% block title %}AYUDA{% endblock %}
+{% extends 'base/layout.pug' %}
+{% block title %}BUSCADOR{% endblock %}
+
+div.hero.is-primary
+	h1.title Como usar api ve?
+	h2.subtitle fundamentos basicos para usar #APIVE
+	`p Las apis de tipo json format 
