--- a/templates/base/head.pug
+++ b/templates/base/head.pug
@@ -1,19 +1,16 @@
-html
-  body
-    .hero-head
+div.hero-head
       nav.navbar
         .container
           .navbar-brand
             a.navbar-item(href='../', style='font-weight:bold;')
-              | #APIVE
-            |                 
+              | #APIVE        
             span.navbar-burger.burger(data-target='navbarMenu')
               span
               |                     
               span
               |                     
               span
-          |             
+              |             
           #navbarMenu.navbar-menu
             .navbar-end
               .tabs.is-right
@@ -27,7 +24,7 @@ html
                   |                                 
                   |                                 
                   span {{ rutas | capitalize }}
-                |                         {% endfor %}
+                | {% endfor %}
                 |                         
                 |                         
                 span.navbar-item
