--- a/templates/base/layout.pug
+++ b/templates/base/layout.pug
@@ -20,7 +20,7 @@ html
   |     
   body
     section.hero.is-info
-      | {% include 'base/head.pug'%}
+      {% include 'base/head.pug'%}
       .hero-body
         .container.has-text-centered
           | {% block body %}
@@ -30,8 +30,7 @@ html
           h2.subtitle
             | Este es un pequeño sistema que tiene como finalidad entregar informacion sobre la identidad de un
             | Ciudadano Venezolano en formato JSON completamente desarrollado en python con la plataforma (Flask).
-          |                     {% endblock %}
-    |         
+          | {% endblock %}
     .box.cta
       p.has-text-centered
         span.tag.is-primary Nuevo
