Arreglada la estructura del diccionario de la api y solucionado problema que impedia que una persona con un  solo apellido o nombre consultara sus datos.
arreglos en el aspecto de las plantillas
Implementacion de PUG para facilitar la maquetacion de los templates.

--- a/templates/base/head.pug
+++ b/templates/base/head.pug
@@ -28,7 +28,7 @@ div.hero-head
                 |                         
                 |                         
                 span.navbar-item
-                  a.button.is-white.is-outlined(href='https://github.com/dansup/bulma-templates/blob/master/templates/hero.html')
+                  a.button.is-white.is-outlined(href='#', title='Proximamente')
                     span.icon
                       i.fa.fa-github
                     |                                 
