--- a/templates/404.pug
+++ b/templates/404.pug
@@ -1,10 +1,7 @@
-html
-  body
-    | {% extends 'base/layout.pug' %}
-    | {% block title %}Page Not Found{% endblock %}
-    | {% block body %}
+extends base/layout
+block title 
+    | ERROR
+block contenido
     h1.title ERROR 404 
-    |  
     h2.subtitle
       | mano acabas de generar un error 404 por que la ruta que escojiste esta rota o la movimos de site. :/
-    | {% endblock %}
