--- a/templates/ayuda.pug
+++ b/templates/ayuda.pug
@@ -1,7 +1,5 @@
-{% extends 'base/layout.pug' %}
-{% block title %}BUSCADOR{% endblock %}
-{% block body %}
-div.hero.is-primary
-	h2.subtitle fundamentos basicos para usar #APIVE
-	p Las apis de tipo json format 
-{% endblock %}
+extends ./base/layout
+block title
+  | - AYUDA
+block contenido
+  +construyendo
