--- a/templates/base/layout.pug
+++ b/templates/base/layout.pug
@@ -1,61 +1,21 @@
-doctype html
-html
+include ./base/mixins
+html(lang=es)
   head
-    // Required meta tags
-    meta(charset='utf-8')
-    |         
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    |         
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    |         
-    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css')
-    |         
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
-    |         
-    link(href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700', rel='stylesheet')
-    |         
-    link(rel='stylesheet', type='text/css', href="{{ url_for('static', filename='main.css') }}")
-    |         
-    title #VENEZOLANO API {% block title %}{% endblock %}
-  |     
+    include ./base/headers.pug
+    title #APIVE
+      block title
   body
     section.hero.is-info
-      {% include 'base/head.pug'%}
+      include ./base/menu
       .hero-body
         .container.has-text-centered
-          | {% block body %}
-          h1.title
-            | #APIVE
-          |                         
-          h2.subtitle
-            | Este es un pequeño sistema que tiene como finalidad entregar informacion sobre la identidad de un
-            | Ciudadano Venezolano en formato JSON completamente desarrollado en python con la plataforma (Flask).
-          | {% endblock %}
-    .box.cta
-      p.has-text-centered
-        span.tag.is-primary Nuevo
-        |  No me juzguen lo deje aqui por si las moscas lo necesito
-        |                 para mas adelante soy muy flojo y no me gusta andar inventando ruedas todo el tiempo.
-      |             
-      .content.has-text-centered
-        .control.level-item
-          a(href='https://github.com/dansup/bulma-templates')
-            .tags.has-addons
-              span.tag.is-dark Flask
-              |                             
-              span.tag.is-info Open Source
-    |             
-    footer.footer
-      .content.has-text-centered
-        p
-          strong #APIVE
-          |  por 
-          a(href='https://davidcastilloc.github.io/') David Castillo
-          | . The source code is licensed
-          |       
-          a(href='http://opensource.org/licenses/mit-license.php') MIT
-          | . El contenido del sitio web esta bajo licencia 
-          a(href='http://creativecommons.org/licenses/by-nc-sa/4.0/') CC BY NC SA 4.0
-          | .
-    |             
+          block contenido
+            .content
+                img(src = "./static/apive.png")
+            .content
+              | Este es un pequeño sistema que tiene como finalidad entregar informacion sobre la identidad de un
+              | Ciudadano Venezolano en formato JSON completamente desarrollado en python con la plataforma (Flask).
+    include ./base/footer
+
+    //Script Del Sitio
     script(async='', type='text/javascript', src="{{ url_for('static', filename='main.js') }}")
