--- a/templates/contribuir.pug
+++ b/templates/contribuir.pug
@@ -1,14 +1,5 @@
-html
-  body
-    | {% extends 'base/layout.pug' %}
-    | {% block title %}Contribuciones{% endblock %}
-    | {% block body %}
-    h1.title CONTRIBUIR FRAME 
-    |  
-    h2.subtitle
-      | Si eres desarrollador y deseas hacer una contribucion aqui te dejo el git donde puedes hacer un fork
-      | para mejorar el sistema.
-    .card
-      | Git request
-      | asdasd
-    | {% endblock %}
+extends ./base/layout
+block title
+    | - CONTRIBUIR
+block contenido
+  +construyendo
