--- a/templates/base/headers.pug
+++ b/templates/base/headers.pug
@@ -1,6 +1,15 @@
 meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge')
 meta(name='viewport', content='width=device-width, initial-scale=1')
+
+link(rel="apple-touch-icon", sizes="180x180", href="{{ url_for('static', filename='apple-touch-icon.png') }}")
+link(rel="icon", type="image/png", sizes="32x32", href="{{ url_for('static', filename='favicon-32x32.png') }}")
+link(rel="icon", type="image/png", sizes="16x16", href="{{ url_for('static', filename='favicon-16x16.png') }}")
+link(rel="manifest", href="/site.webmanifest")
+link(rel="mask-icon", href="/safari-pinned-tab.svg", color="#5bbad5")
+meta(name="msapplication-TileColor", content="#da532c")
+meta(name="theme-color", content="#ffffff")
+
 link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css')
 link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
 link(href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700', rel='stylesheet')
