--- a/templates/base/layout.pug
+++ b/templates/base/layout.pug
@@ -11,7 +11,7 @@ html(lang=es)
         .container.has-text-centered
           block contenido
             .content
-                img(src = "./static/apive.png")
+                img(src= url_for('static', filename='apive.png'))
             .content
               | Este es un pequeño sistema que tiene como finalidad entregar informacion sobre la identidad de un
               | Ciudadano Venezolano en formato JSON completamente desarrollado en python con la plataforma (Flask).
