--- a/templates/base/menu.pug
+++ b/templates/base/menu.pug
@@ -20,7 +20,7 @@ div.hero-head
                       i(class= config.menu.iconos[index])
                     span= config.menu.rutas[index].capitalize()
                 span.navbar-item
-                  a.button.is-white.is-outlined(href='#', title='Proximamente')
+                  a.button.is-white.is-outlined(href='https://gitlab.com/davidjdev/apive.git', title='En GitLAb' target="_blank")
                     span.icon
-                      i.fa.fa-github
+                      i.fa.fa-gitlab
                     span(title='Para ver el codigo del proyecto!') Ver Codigo
