Agregado paquete para forzar el ssl en el servidor de produccion actualizado el req....txt implementado config.py

--- a/templates/base/layout.pug
+++ b/templates/base/layout.pug
@@ -19,7 +19,7 @@ html(lang=es)
             .tile.is-ancestor
               .tile.is-vertical.is-7
               a(href="https://apive.herokuapp.com/api/v1/7654321")
-                .notification.is-dark(title='Pinchame para probarme!')
+                .notification.is-info(title='Pinchame para probarme!')
                   |Ruta: https://apive.herokuapp.com/api/v1/[CEDULA]
 
     include ./base/footer
