Agregada funcionalidad de ejemplo buscar! Con Fiddle.

--- a/templates/buscar_ciudadano.pug
+++ b/templates/buscar_ciudadano.pug
@@ -2,4 +2,4 @@ extends base/layout
 block title
     | - BUSCADOR
 block contenido
-  +construyendo
+    | <script async src="//jsfiddle.net/DaviDJInformatico/5w9jgryp/59/embed/result/"></script>
