Agregado boton donar! <3

--- a/templates/contribuir.pug
+++ b/templates/contribuir.pug
@@ -2,4 +2,5 @@ extends ./base/layout
 block title
     | - CONTRIBUIR
 block contenido
-  +construyendo
+  <script src="https://www.paypal.com/sdk/js?client-id=ASwlI-jpDMvTvPn8foZjetil-OeTz3qmalcwK9WlH_3SWbkD1R6MBHyH3dfutvBrq_yi3u8jtFqjsqT_"></script>
+  <script>paypal.Buttons().render('body');</script>
