Arreglado fallo a la hora de buscar cedulas con nombres de mas de 4 frases Activado sistema de busqueda de cedulas de forma nativa usando la API #APIVE y VUEJS

--- a/templates/base/layout.pug
+++ b/templates/base/layout.pug
@@ -18,7 +18,7 @@ html(lang=es)
                 | Ciudadano Venezolano en formato JSON completamente desarrollado en python con la plataforma (Flask).
             .tile.is-ancestor
               .tile.is-vertical.is-7
-              a(href="https://apive.herokuapp.com/api/v1/7654321")
+              a(href="/api/v1/7654321")
                 .notification.is-info(title='Pinchame para probarme!')
                   |Ruta: https://apive.herokuapp.com/api/v1/[CEDULA]
 
