--- a/templates/base/headers.pug
+++ b/templates/base/headers.pug
@@ -14,3 +14,5 @@ link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/
 link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
 link(href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700', rel='stylesheet')
 link(rel='stylesheet', type='text/css', href="{{ url_for('static', filename='main.css') }}")
+script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.17.1/axios.js")
+script(src="https://unpkg.com/vue")
