*Reconstruido el codigo del componente buscador *Api retorna 2 tipos de error diferentes 	Codigo 3 Ciudadano Fallecido 	Codigo 2 Ciudadano No registrado

--- a/templates/buscar_ciudadano.html
+++ b/templates/buscar_ciudadano.html
@@ -6,113 +6,5 @@
 <div class="content">
     <h1 class="title">Buscador</h1>
     <h2 class="subtitle">Inserta en el campo requerido para buscar en la base de datos</h2>
-    
-    <div id="app">
-        <div v-if="loading">
-            <div class="notification is-primary">
-                <h1 class="title">CARGANDO...</h1>
-            </div>
-        </div>
-        <div v-else>
-            <div class="content has-text-centered">
-                <div class="field has-addons">
-                    <div class="control">
-                        <input autocomplete="off" name="cedula"  v-model.number="cedula" @keyup.enter="buscar" class="input is-large" type="text"  maxlength="8" placeholder="CEDULA" required>
-                    </div>
-                    <div class="control">
-                        <a class="button is-info is-large" v-on:click="buscar">
-                            BUSCAR
-                        </a>
-                    </div>
-                </div>
-                <article v-if="validacion" class="message is-warning">
-                    <div class="message-header">
-                        <p>Problema de validacion!</p>
-                        <button  v-bind:class= "{active: validacion}" 
-                        v-on:click="validacion = false"
-                        class="delete" aria-label="delete"></button>
-                    </div>
-                    <div class="message-body">
-                       <h1>Verifique la cedula!</h1>    
-                    </div>
-                </article>
-                  <article v-if="datos.error"  v-bind:class= "{active: datos.error}" class="message is-danger">
-                    <div class="message-header">
-                        <p>Error!</p>
-                        <button  
-                        v-on:click="limpiar"
-                        class="delete" ></button>
-                    </div>
-                    <div class="message-body">
-                       <h1> {{ '{{datos.descripcion}}' }}</h1>    
-                    </div>
-                </article>
-                <div v-if="resultado" class="notification is-primary">
-                    <table class="table is-bordered">
-                        <tbody v-for="(value, key) in datos">
-                            <tr>
-                                <td class="is-selected">
-                                    {{ '{{key}}' }}
-                                </td>
-                                <td>
-                                    {{ '{{value}}' }}
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<script>
-    new Vue({
-    el: '#app',
-    data() {
-    return {
-      loading: false,
-      validacion: false,
-      resultado: false,
-      cedula: "",
-      datos: [] // add posts here so reactivity is working, also undefined would be OK
-    }
-  },
-  created() {
-    this.loading = false
-    this.resultado = false
-  },
-    methods: {
-    buscar: function (event) {
-    //Si la cedula no es mayor al millon, no vale la pena hacer la solicitud a la api
-
-    if (this.cedula >= 1000000) {
-        this.validacion = false
-        var URL = "/api/v1/" + this.cedula
-        this.loading = true
-                axios.get(URL).then((response) => {
-              // console.log(response.data, this)
-              this.datos = response.data.ciudadano
-              this.loading = false
-              //Si la api devuelve error apago la tabla!
-             if (this.datos.error == true){
-                    this.resultado = false
-                }else{
-                    this.resultado = true
-             }
-        })
-    }else{
-    // enciendo el mensaje de validacion y reseteo el componente.
-       this.validacion = true
-       this.resultado = false
-
-    }
-
-    },
-    limpiar: function(event){
-       this.datos={"error":false}
-    }
-  }
-  
-})
-</script>
+    {% include 'buscador.html' %}
 {% endblock %}
