--- a/templates/base/headers.pug
+++ b/templates/base/headers.pug
@@ -9,9 +9,8 @@ link(rel="manifest", href="/site.webmanifest")
 link(rel="mask-icon", href="/safari-pinned-tab.svg", color="#5bbad5")
 meta(name="msapplication-TileColor", content="#da532c")
 meta(name="theme-color", content="#ffffff")
-
 link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css')
-link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.7.2/css/all.css', integrity='sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr', crossorigin='anonymous')
 link(href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700', rel='stylesheet')
 link(rel='stylesheet', type='text/css', href="{{ url_for('static', filename='main.css') }}")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.17.1/axios.js")
