* Actualicacion de Awesome Icons. * Agregado iconos actualizados en el componente buscador. * Clase CNE Acualizada, Nuevo tipo de error.

--- a/templates/base/menu.pug
+++ b/templates/base/menu.pug
@@ -22,5 +22,5 @@ div.hero-head
                 span.navbar-item
                   a.button.is-white.is-outlined(href='https://gitlab.com/davidjdev/apive.git', title='En GitLAb' target="_blank")
                     span.icon
-                      i.fa.fa-gitlab
+                      i.fab.fa-gitlab
                     span(title='Para ver el codigo del proyecto!') Ver Codigo
