--- a/templates/base/mixins.pug
+++ b/templates/base/mixins.pug
@@ -5,19 +5,19 @@ mixin twitter
 mixin gitlab
   a(href="https://gitlab.com/davidjdev" target="_blank")
     span#btngitlab.button.is-info
-      i.fa.fa-gitlab(aria-hidden="true")
+      i.fab.fa-gitlab(aria-hidden="true")
       |@DaviDJDev
 
 mixin facebook
   a(href="https://www.facebook.com/davidjcinformatico" target="_blank")
     span#btnfacebook.button.is-link
-      i.fa.fa-facebook(aria-hidden="true")
+      i.fab.fa-facebook(aria-hidden="true")
       |DaviDJCInformatico
 
 mixin instagram
   a(href="https://www.instagram.com/davidjdevelop/" target="_blank")
     span#btninstagram.button.is-info
-      i.fa.fa-instagram(aria-hidden="true")
+      i.fab.fa-instagram(aria-hidden="true")
       |@xXDaviDJDevelop
 
 mixin construyendo
