* Agregado www.davidjose.com.ve al LayoutPrincipal

--- a/templates/base/footer.pug
+++ b/templates/base/footer.pug
@@ -5,6 +5,7 @@ footer#footer
         .bd-footer-title
           strong #APIVE
           h4 David Castillo
+          a(href='http://davidjose.com.ve/') www.davidjose.com.ve
         .bd-footer-iframe
           +twitter
       .column.is-4
