--- a/static/main.css
+++ b/static/main.css
@@ -5,7 +5,7 @@ html,body {
   background: linear-gradient(
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.5)
-    ), url('https://unsplash.it/1200/900?random') no-repeat center center fixed;
+    ), url('https://source.unsplash.com/collection/4325086/800x300') no-repeat center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
