--- a/src/app/index.html
+++ b/src/app/index.html
@@ -1,7 +1,3 @@
-
-
-
-
 <html>
 	<head>
 	  <meta charset="utf-8"/>
@@ -17,7 +13,7 @@
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css"/>
 	  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"/>
 	  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet"/>
-	  <link rel="stylesheet" type="text/css" href="/static/main.css%3Fq%3Dbde1c10c02"/>
+	  <link rel="stylesheet" type="text/css" href="/static/main.css"/>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.17.1/axios.js"></script>
 	  <script src="https://unpkg.com/vue"></script>
 	  <title>#APIVE
@@ -40,7 +36,7 @@
 		  </nav>
 		</div>
 		<div class="hero-body">
-		  <div class="container has-text-centered">
+		  <div class="2container has-text-centered">
 			<div class="content"><img src="/static/apive.png"/>
 			</div>
 			<div class="columns is-mobile">
@@ -84,6 +80,6 @@
 		</div>
 	  </footer>
 	  <!--Script Del Sitio-->
-	  <script async="" type="text/javascript" src="/static/main.js%3Fq%3D673cb94a9b"></script>
+	  <script async="" type="text/javascript" src="/static/main.js"></script>
 	</body>
   </html>
